# NumericScience

./: .gitignore  CMakeLists.txt  NOTAS.txt
database/: NumericScienceDatabase.db  database.sql  gematria.txt  script.sh
src/: main.cpp
src/calculator/: Calculator.cpp  Calculator.hpp
